--- a/PJH/Test001.ioc
+++ b/PJH/Test001.ioc
@@ -1,18 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.Request2=USART1_TX
-Dma.RequestsNb=3
-Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.2.Instance=DMA2_Stream7
-Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.2.Mode=DMA_NORMAL
-Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.RequestsNb=2
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -41,40 +30,42 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
+Mcu.IP10=USART2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP8=TIM5
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
 Mcu.Pin17=PB8
 Mcu.Pin18=PB9
 Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC0
 Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PC1
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -83,7 +74,6 @@ MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -97,13 +87,15 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA0-WKUP.Signal=S_TIM5_CH1
 PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
@@ -126,11 +118,10 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Locked=true
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
-PA7.Signal=S_TIM3_CH2
-PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
@@ -140,6 +131,9 @@ PB4.Signal=SPI1_MISO
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -169,7 +163,7 @@ PH1\ -\ OSC_OUT.Locked=true
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
 PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -195,7 +189,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -236,10 +230,10 @@ SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI1.CalculateBaudRate=2.25 MBits/s
+SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
+SH.S_TIM5_CH1.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.CalculateBaudRate=4.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
@@ -252,12 +246,15 @@ TIM2.Period=16000-1
 TIM2.Prescaler=9-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation1 CH1
 TIM3.Period=16000-1
 TIM3.Prescaler=9-1
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode,BaudRate
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
+TIM5.Period=16000-1
+TIM5.Prescaler=9-1
+USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate
@@ -268,5 +265,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
