--- a/KSH/nRF_Controller/nRF_Controller/NRF24L01_Tx_Controller.ioc
+++ b/KSH/nRF_Controller/nRF_Controller/NRF24L01_Tx_Controller.ioc
@@ -38,13 +38,15 @@ Mcu.Pin1=PH0 - OSC_IN
 Mcu.Pin10=PA6
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin13=PC10
+Mcu.Pin14=PC12
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PH1 - OSC_OUT
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PC0
 Mcu.Pin4=PC1
 Mcu.Pin5=PA0-WKUP
@@ -52,7 +54,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -117,6 +119,18 @@ PC0.Signal=ADCx_IN10
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=THROTTLE_1
 PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC10.GPIO_Label=button2
+PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC10.GPIO_PuPd=GPIO_PULLUP
+PC10.Locked=true
+PC10.Signal=GPXTI10
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC12.GPIO_Label=button3
+PC12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC12.GPIO_PuPd=GPIO_PULLUP
+PC12.Locked=true
+PC12.Signal=GPXTI12
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=button
 PC13-ANTI_TAMP.Locked=true
@@ -160,7 +174,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -201,6 +215,10 @@ SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
